[feat]: `Spring` 맞춤 `TransactionManager` 추가 - `JTA`(Java Transaction API) 분산 트랜잭션 구현체 추가 - `Jakarta` 패키지에서 제공되는 `TransactionManager`, `UserTransactionManager`를 제공받을 수 있도록 처리